manifests/istio/istio-install/base/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingressgateway
  labels:
    release: istio
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - '*'

# # https
# spec:
#   selector:
#     istio: ingressgateway
#     app: istio-ingressgateway
#   servers:
#   - hosts:
#     - 'zoratech.dev'
#     # - '*'
#     port:
#       name: https
#       number: 443
#       protocol: HTTPS
#     tls:
#       mode: SIMPLE
#       # credentialName: zoratech-credential
#       privateKey: /etc/istio/ingressgateway-certs/tls.key
#       serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
